--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Electronics Shop</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <body class="bg-gray-100">
     <div id="root"></div>
